[fix] navigation mobile scss

--- a/src/styles/components/organisms/menu.scss
+++ b/src/styles/components/organisms/menu.scss
@@ -110,6 +110,11 @@
         }
 
     }
+
+    &__Wrapper {
+        width: 100%;
+        display: flex;
+    }
 }
 
 @media (min-width: 768px) {
@@ -118,8 +123,6 @@
         grid-column-end: 2;
         grid-row-start: 2;
         grid-row-end: 3;
-        flex-direction: column;
-        align-items: flex-end;
 
         height: auto;
         border: none;
@@ -132,6 +135,11 @@
 
         &__Wrapper {
             margin-right: 24px;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-end;
         }
 
         &__Tab {
